# arrow-ipc-no-std

./: Cargo.toml  README.md  flake.nix
arrow-ipc-no-std/: Cargo.toml  build.rs
arrow-ipc-no-std/src/: lib.rs  parser_combinators.rs
arrow-ipc-no-std/src/flatbuffers/: Message_generated.rs
fbs/: Cargo.toml
fbs/src/: File.rs  File_generated.rs  Message.rs  Message_generated.rs  Schema.rs  Schema_generated.rs  SparseTensor.rs  SparseTensor_generated.rs  Tensor.rs  Tensor_generated.rs  lib.rs
src/: main.rs
