[package]
name = "analyze-record-batch-message"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["arrow-ipc-no-std"]

[workspace.dependencies]
arrow-ipc-no-std = { path = "./arrow-ipc-no-std" }
flatbuffers = { version = "25.12.19", default-features = false }
hex = "0.4.3"

[dependencies]
hex.workspace = true
arrow-ipc-no-std.workspace = true
flatbuffers.workspace = true
